--- a/client/zamowienie.html
+++ b/client/zamowienie.html
@@ -32,12 +32,14 @@
             <option value="Ferrari">Ferrari</option>
             <option value="Lamborghini">Lamborghini</option>
             <option value="Tesla">Tesla</option>
+        </select><br>
+        <button type="button" id="btnMarka">Pokaż modele</button><br>
+        <select name="model" id="model">
         </select>
-        <label for="model">Model:</label>
         <label for="dataOd">Data początku wypożyczenia</label>
-        <input type="date" name="dataOd" id="dataOd">
+        <input type="date" name="dataOd" id="dataOd" required>
         <label for="dataDo">Data końca wypożyczenia</label>
-        <input type="date" name="dataDo" id="dataDo"><br>
+        <input type="date" name="dataDo" id="dataDo" required><br>
         <button type="button">Prześlij</button>
     </div>
     <script src="app.js"></script>
