--- a/client/zamowienie.html
+++ b/client/zamowienie.html
@@ -34,8 +34,7 @@
             <option value="Tesla">Tesla</option>
         </select><br>
         <button type="button" id="btnMarka">Pokaż modele</button><br>
-        <select name="model" id="model">
-        </select>
+        <select name="model" id="model"></select>
         <label for="dataOd">Data początku wypożyczenia</label>
         <input type="date" name="dataOd" id="dataOd" required>
         <label for="dataDo">Data końca wypożyczenia</label>
