--- a/client/zamowienie.html
+++ b/client/zamowienie.html
@@ -32,7 +32,8 @@
             <option value="Ferrari">Ferrari</option>
             <option value="Lamborghini">Lamborghini</option>
             <option value="Tesla">Tesla</option>
-        </select><br>
+        </select>
+        <button type="button" id="znajdz">Znajdź modele</button>
         <label for="model">Model:</label>
         <input type="text" id="model" name="model">
         <label for="dataOd">Data początku wypożyczenia</label>
