--- a/client/zamowienie.html
+++ b/client/zamowienie.html
@@ -17,30 +17,57 @@
         <a href="onas.html">O nas</a>
     </div>
     <div id="main">
-        <label for="imie">Imie:</label>
+        <h3>Złóż zamówienie</h3>
+        <label for="imie">Imię:</label>
         <input type="text" id="imie" name="imie">
         <label for="nazwisko">Nazwisko:</label>
         <input type="text" id="nazwisko" name="nazwisko">
-        <label for="marka">Marka:</label>
-        <select name="marka" id="marka">
-            <option value="Mercedes-Benz">Mercedes-Benz</option>
-            <option value="BMW">BMW</option>
-            <option value="Lexus">Lexus</option>
-            <option value="Range Rover">Range Rover</option>
-            <option value="Porsche">Porsche</option>
-            <option value="Aston Martin">Aston Martin</option>
-            <option value="Ferrari">Ferrari</option>
-            <option value="Lamborghini">Lamborghini</option>
-            <option value="Tesla">Tesla</option>
-        </select>
-        <button type="button" id="znajdz">Znajdź modele</button>
+        <label for="makra">Marka:</label>
+        <input type="text" id="marka" name="marka">
         <label for="model">Model:</label>
         <input type="text" id="model" name="model">
-        <label for="dataOd">Data początku wypożyczenia</label>
-        <input type="date" name="dataOd" id="dataOd" required>
-        <label for="dataDo">Data końca wypożyczenia</label>
-        <input type="date" name="dataDo" id="dataDo" required><br>
-        <button type="button" id="zamow">Zamów</button>
+        <input type="submit" value="Złóż zamówienie" id="zamow" onclick="zamowienie()">
+        <div id="naszeMarki">
+    <h3>Nasze marki</h3>
+<details>
+  <summary>Mercedes-Benz</summary>
+  S-Class
+</details>
+<details>
+  <summary>BMW</summary>
+  7-Series<br>
+  X7 M60i<br>
+  i7 M70
+</details>
+<details>
+  <summary>Lexus</summary>
+  	LS 500h
+</details>
+<details>
+  <summary>Range Rover</summary>
+  Autobiography
+</details>
+<details>
+  <summary>Porsche</summary>
+  911 Carrera 4S
+</details>
+<details>
+  <summary>Aston Martin</summary>
+  DB11 V8
+</details>
+<details>
+  <summary>Ferrari</summary>
+  Roma
+</details>
+<details>
+  <summary>Lamborghini</summary>
+  Hurracan EVO
+</details>
+<details>
+  <summary>Tesla</summary>
+  Model S Plaid
+</details>
+</div>
     </div>
     <script src="app.js"></script>
 </body>
