--- a/client/administrator.html
+++ b/client/administrator.html
@@ -3,10 +3,25 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Strona Główna</title>
+    <link rel="stylesheet" href="styl.css">
 </head>
 <body>
+    <div id="baner">
+        <h2>MotoLux</h2>
+    </div>
+    <div id="nav">
+        <a href="index.html">Strona Główna</a>
+        <a href="opinie.html">Opinie</a>
+        <a href="zamowienie.html">Złóż zamówienie</a>
+        <a href="onas.html">O nas</a>
+    </div>
+    <div id="main">
         <h3>Pole edycyjne administratora</h3>  
+        <button type="button" id="dodawanie"><a href="dodawanie.html">Dodawanie pojazdu</a></button>
+        <button type="button" id="usuwanie"><a href="usuwanie.html">Usuwanie pojazdu</a></button>
         <button type="button" id="zobaczzamowienia"><a href="zamowienia.html">Zobacz zamówienia</a></button>
+    </div>
+    <script src="administrator.js"></script>
 </body>
 </html>
