--- a/client/index.html
+++ b/client/index.html
@@ -12,9 +12,9 @@
     </div>
     <div id="nav">
         <a href="onas.html">O nas</a>
-        <a href="galeria.html">Galeria</a>
-        <a href="zamowienie.html">Złóż zamówienie</a>
         <a href="opinie.html">Opinie</a>
+        <a href="zamowienie.html">Złóż zamówienie</a>
+        <a href="administrator.html">Administrator</a>
     </div>
     <div id="main">
         <div class="button-con">
