--- a/client/onas.html
+++ b/client/onas.html
@@ -12,9 +12,9 @@
     </div>
     <div id="nav">
         <a href="index.html">Strona Główna</a>
-        <a href="galeria.html">Galeria</a>
-        <a href="zamowienie.html">Złóż zamówienie</a>
         <a href="opinie.html">Opinie</a>
+        <a href="zamowienie.html">Złóż zamówienie</a>
+        <a href="administrator.html">Administrator</a>
     </div>
     <div id="main">
         <p><b>MotoLux</b> - Luksusowa Wypożyczalnia Samochodów <br>
