--- a/client/usuwanie.html
+++ b/client/usuwanie.html
@@ -1,12 +1,17 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pl">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="styl.css">
 </head>
 <body>
+    <div id="sel">
+    <select id="markaSel"></select><br>
+    <select id="modelSel"></select><br>
+    <button type="button" id="butUsun">Usuń pojazd</button>
     <button type="button"><a href="administrator.html">Wróć na stronę</a></button>
+</div>
+    <script src="administrator.js"></script>
 </body>
 </html>
