--- a/client/zamowienie.html
+++ b/client/zamowienie.html
@@ -12,9 +12,9 @@
     </div>
     <div id="nav">
         <a href="index.html">Strona Główna</a>
-        <a href="galeria.html">Galeria</a>
-        <a href="opinie.html">Opinie</a>
-        <a href="onas.html">O nas</a>
+        <a href="opinie.html">Galeria</a>
+        <a href="onas.html">Opinie</a>
+        <a href="administrator.html">Administrator</a>
     </div>
     <div id="main">
         <h3>Złóż zamówienie</h3>
