--- a/client/zamowienia.html
+++ b/client/zamowienia.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="styl.css">
 </head>
 <body>
+    <button type="button" id="zobaczZam">Zobacz zamówienia</button>
+    <table></table>
     <button type="button"><a href="administrator.html">Wróć na stronę</a></button>
 </body>
 </html>
