--- a/client/zamowienia.html
+++ b/client/zamowienia.html
@@ -9,5 +9,6 @@
     <button type="button" id="zobaczZam">Zobacz zamówienia</button>
     <table></table>
     <button type="button"><a href="administrator.html">Wróć na stronę</a></button>
+    <script src="zamowienia.js"></script>
 </body>
 </html>
