--- a/client/usuwanie.html
+++ b/client/usuwanie.html
@@ -12,6 +12,6 @@
     <button type="button" id="butUsun">Usuń pojazd</button>
     <button type="button"><a href="administrator.html">Wróć na stronę</a></button>
 </div>
-    <script src="administrator.js"></script>
+    <script src="usuwanie.js"></script>
 </body>
 </html>
