--- a/client/dodawanie.html
+++ b/client/dodawanie.html
@@ -4,13 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="administrator.css">
 </head>
 <body>
     Marka:<input type="text"id="marka"><br>
     Model:<input type="text" id="model"><br>
     Rok Produkcji<input type="text" id="rok"><br>
     Cena<input type="text" id="cena"><br>
-    <button type="button" id="dodaj">Dodaj pojazd</button>
+    <button type="button" id="dodaj">Dodaj ofertę</button>
     <button type="button"><a href="administrator.html">Wróć na stronę</a></button>
     <script src="administrator.js"></script>
 </body>
