--- a/client/usuwanie.html
+++ b/client/usuwanie.html
@@ -4,12 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="administrator.css">
 </head>
 <body>
     <div id="sel">
         <select id="markaSel"></select><br>
         <select id="modelSel"></select><br>
-    <button type="button" id="butUsun">Usuń pojazd</button>
+    <button type="button" id="butUsun">Usuń ofertę</button>
     <button type="button"><a href="administrator.html">Wróć na stronę</a></button>
 </div>
     <script src="usuwanie.js"></script>
