--- a/client/zamowienia.html
+++ b/client/zamowienia.html
@@ -4,11 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="administrator.css">
 </head>
 <body>
     <button type="button" id="zobaczZam">Zobacz zamówienia</button>
     <table></table>
-    <button type="button"><a href="administrator.html">Wróć na stronę</a></button>
+    <button type="button" id="wroc"><a href="administrator.html">Wróć na stronę</a></button>
     <script src="zamowienia.js"></script>
 </body>
 </html>
